Add API to get EWT and Position of a task.